--- a/victor/.config/hypr/hyprland.conf
+++ b/victor/.config/hypr/hyprland.conf
@@ -17,6 +17,8 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+# source=hyprland-colors.conf
+
 
 ################
 ### MONITORS ###
@@ -39,9 +41,9 @@ xwayland {
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = uwsm-app -- foot
-$fileManager = uwsm-app -- thunar
-$menu = uwsm-app -- fuzzel --launch-prefix='uwsm-app --'
+$terminal = app2unit -- footclient
+$fileManager = app2unit -- thunar
+$menu = app2unit -- fuzzel --launch-prefix='app2unit --'
 #################
 ### AUTOSTART ###
 #################
@@ -53,11 +55,9 @@ $menu = uwsm-app -- fuzzel --launch-prefix='uwsm-app --'
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = uwsm-app -- fuzzel --launch-prefix='uwsm-app --'
-exec-once = uwsm-app -- swaync
-exec-once = uwsm-app -- waybar
-exec-once = uwsm-app -- wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = uwsm-app -- wl-paste --type image --watch cliphist store # Stores only image data
+exec-once = app2unit -- fuzzel --launch-prefix='app2unit --'
+exec-once = app2unit -- wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = app2unit -- wl-paste --type image --watch cliphist store # Stores only image data
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -94,7 +94,7 @@ exec-once = uwsm-app -- wl-paste --type image --watch cliphist store # Stores on
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 5
+    gaps_in = 2
     gaps_out = 5
 
     border_size = 2
@@ -217,7 +217,7 @@ input {
 
     follow_mouse = 2
 
-    left_handed = true
+    left_handed = false
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
