--- a/playbooks/base.yaml
+++ b/playbooks/base.yaml
@@ -8,38 +8,35 @@ packages:
     - linux
     - linux-firmware
     - efibootmgr
+    - mesa
+    - libva-mesa-driver
 
   intel:
     - intel-ucode
 
-    - mesa
-    # - lib32-mesa
-
     - vulkan-intel
-    # - lib32-vulkan-intel
-
-    - vulkan-radeon
-    # - lib32-vulkan-radeon
-
-    - xf86-video-amdgpu
-    - xf86-video-ati
-    - xf86-video-intel
-
-    # - vpl-gpu-rt
-    - libva-utils
-    - libva-mesa-driver
     - intel-media-driver
-    - linux-firmware-intel
+    - libva-intel-driver
+
+    - intel-gpu-tools
+
+    # - vlc-plugin-quicksync
+
+  amd:
+    - vulkan-radeon
+
+    # - radeontop
+    # - amdgpu_top
 
   system:
     - pipewire
     - pipewire-alsa
     - pipewire-pulse
-    - pipewire-jack
     - wireplumber
 
     - openssh
-    - networkmanager # iwd
+    # - iwd
+    - networkmanager
 
     - reflector
 
@@ -59,6 +56,6 @@ units:
   - auto-cpufreq.service
 
 
-pre_install_hook:
-post_install_hook: scripts/my-setup.sh
+# pre_install_hook:
+# post_install_hook: scripts/my-setup.sh
 # pacman -Ql openssh | grep systemd/system
