--- a/victor/.config/foot/foot.ini
+++ b/victor/.config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-# include = /home/victor/.config/foot/themes/catppuccin-mocha.ini
+include = /home/victor/.config/foot/themes/catppuccin-mocha.ini
 
 # font=monospace:size=8
 font=Firacode:size=11.25
@@ -105,7 +105,7 @@ font=Firacode:size=11.25
 # long-press-delay=400
 
 [colors]
-# alpha=1.0
+alpha=0.65
 # alpha-mode=default # Can be `default`, `matching` or `all`
 # background=242424
 # foreground=ffffff
