--- a/victor/.config/hypr/hyprlock.conf
+++ b/victor/.config/hypr/hyprlock.conf
@@ -9,6 +9,8 @@
 # you can get started by copying this config to ~/.config/hypr/hyprlock.conf
 #
 
+# source=~/.config/hypr/hyprlock-colors.conf
+
 $font = Monospace
 
 general {
