--- a/victor/.config/hypr/hyprpaper.conf
+++ b/victor/.config/hypr/hyprpaper.conf
@@ -1,10 +1,16 @@
 #!/usr/bin/env bash
 
-# WALLPAPER_DIR="$HOME/wallpapers/"
-# CURRENT_WALL=$(hyprctl hyprpaper listloaded)
+WALLPAPER_DIR="$HOME/.config/hypr/wallpaper/"
+CURRENT_WALL=$(hyprctl hyprpaper listloaded)
 
 # Get a random wallpaper that is not the current one
 # WALLPAPER=$(find "$WALLPAPER_DIR" -type f ! -name "$(basename "$CURRENT_WALL")" | shuf -n 1)
 
 # Apply the selected wallpaper
 # hyprctl hyprpaper reload ,"$WALLPAPER"
+
+# wallpaper {
+# 	monitor=eDP-1
+#     path = ~/.config/hypr/wallpaper/mashu.jpg
+#     fit_mode = cover
+# }
