--- a/victor/.config/hypr/hyprpaper.conf
+++ b/victor/.config/hypr/hyprpaper.conf
@@ -9,8 +9,8 @@ CURRENT_WALL=$(hyprctl hyprpaper listloaded)
 # Apply the selected wallpaper
 # hyprctl hyprpaper reload ,"$WALLPAPER"
 
-# wallpaper {
-# 	monitor=eDP-1
-#     path = ~/.config/hypr/wallpaper/mashu.jpg
-#     fit_mode = cover
-# }
+wallpaper {
+	monitor =
+    path = ~/.config/hypr/wallpaper/mashu.jpg
+    fit_mode = cover
+}
