--- a/victor/.config/hypr/hyprland.conf
+++ b/victor/.config/hypr/hyprland.conf
@@ -248,6 +248,7 @@ device {
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
+$shiftMod = SUPER + SHIFT # Sets "Windows + Shift" key as shift modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
@@ -261,6 +262,13 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, 1
 bind = , F11, fullscreen, 0
+
+# Screenshot a window
+bind = $mainMod, PRINT, exec, hyprshot -m window
+# Screenshot a monitor
+bind = , PRINT, exec, hyprshot -m output
+# Screenshot a region
+bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -302,7 +310,6 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod, S, movetoworkspace, +0
 bind = $mainMod, S, togglespecialworkspace, magic
