--- a/victor/.config/hypr/hyprlock.conf
+++ b/victor/.config/hypr/hyprlock.conf
@@ -1,108 +1,141 @@
-# sample hyprlock.conf
-# for more configuration options, refer https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock
-#
-# rendered text in all widgets supports pango markup (e.g. <b> or <i> tags)
-# ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#general-remarks
-#
-# shortcuts to clear password buffer: ESC, Ctrl+U, Ctrl+Backspace
-#
-# you can get started by copying this config to ~/.config/hypr/hyprlock.conf
-#
+source = $HOME/.config/hypr/scheme/mocha.conf
 
-# source=~/.config/hypr/hyprlock-colors.conf
-
-$font = Monospace
-
-general {
-    hide_cursor = false
-}
-
-# uncomment to enable fingerprint authentication
-# auth {
-#     fingerprint {
-#         enabled = true
-#         ready_message = Scan fingerprint to unlock
-#         present_message = Scanning...
-#         retry_delay = 250 # in milliseconds
-#     }
-# }
-
-animations {
-    enabled = true
-    bezier = linear, 1, 1, 0, 0
-    animation = fadeIn, 1, 5, linear
-    animation = fadeOut, 1, 5, linear
-    animation = inputFieldDots, 1, 2, linear
-}
-
+# BACKGROUND
 background {
     monitor =
-    path = screenshot
-    blur_passes = 3
+    path = ~/.config/hypr/hyprlock/background.png
+    blur_passes = 2
+    contrast = 0.8916
+    brightness = 0.8172
+    vibrancy = 0.1696
+    vibrancy_darkness = 0.0
 }
 
+# GENERAL
+general {
+}
+
+
+# Day
+label {
+    monitor =
+    text = cmd[update:1000] echo -e "$(date +"%A - %d %B")"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 30
+    font_family = SF Pro Display Bold
+    position = 0, 300
+    halign = center
+    valign = center
+}
+
+# Time
+label {
+    monitor =
+    text = cmd[update:1000] echo "<span>$(date +"- %I:%M -")</span>"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 120
+    font_family = SF Pro Display Bold
+    position = 0, 440
+    halign = center
+    valign = center
+}
+
+# Profie-Photo
+image {
+    monitor =
+    path = $HOME/.config/hypr/hyprlock/gil.jpg
+    border_size = 2
+    border_color = rgba(255, 255, 255, .65)
+    size = 150
+    rounding = -1
+    rotate = 0
+    reload_time = -1
+    reload_cmd =
+    position = 0, 60
+    halign = center
+    valign = center
+}
+
+# USER-BOX
+shape {
+    monitor =
+    size = 350, 80
+    color = rgba(255, 255, 255, .1)
+    rounding = -1
+    border_size = 0
+    border_color = rgba(255, 255, 255, 0)
+    rotate = 0
+    xray = false # if true, make a "hole" in the background (rectangle of specified size, no rotation)
+
+    position = 0, -150
+    halign = center
+    valign = center
+}
+
+# USER
+label {
+    monitor =
+    text =     $USER
+    color = rgba(216, 222, 233, 0.80)
+    font_size = 22
+    font_family = SF Pro Display Bold
+    position = 0, -150
+    halign = center
+    valign = center
+}
+
+# INPUT FIELD
 input-field {
     monitor =
-    size = 20%, 5%
-    outline_thickness = 3
-    inner_color = rgba(0, 0, 0, 0.0) # no fill
-
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
-    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
-
-    font_color = rgb(143, 143, 143)
+    size = 350, 80
+    outline_thickness = 2
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    outer_color = rgba(255, 255, 255, 0)
+    inner_color = rgba(255, 255, 255, 0.1)
+    font_color = rgb(200, 200, 200)
     fade_on_empty = false
-    rounding = 15
-
-    font_family = $font
-    placeholder_text = Input password...
-    fail_text = $PAMFAIL
-
-    # uncomment to use a letter instead of a dot to indicate the typed password
-    # dots_text_format = *
-    # dots_size = 0.4
-    dots_spacing = 0.3
-
-    # uncomment to use an input indicator that does not show the password length (similar to swaylock's input indicator)
-    # hide_input = true
-
-    position = 0, -20
+    font_family = SF Pro Display Bold
+    placeholder_text = <i><span foreground="##ffffff99">🔒 Enter Pass</span></i>
+    hide_input = false
+    position = 0, -240
     halign = center
     valign = center
 }
 
-# TIME
+# Reboot
 label {
     monitor =
-    text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
-    font_size = 90
-    font_family = $font
-
-    position = -30, 0
-    halign = right
-    valign = top
-}
-
-# DATE
-label {
-    monitor =
-    text = cmd[update:60000] date +"%A, %d %B %Y" # update every 60 seconds
-    font_size = 25
-    font_family = $font
-
-    position = -30, -150
-    halign = right
-    valign = top
-}
-
-label {
-    monitor =
-    text = $LAYOUT[en,ru]
-    font_size = 24
-    onclick = hyprctl switchxkblayout all next
-
-    position = 250, -20
+    text = 󰜉
+    color = rgba(255, 255, 255, 0.6)
+    font_size = 80
+    onclick = reboot now
+    position = 0, 100
     halign = center
-    valign = center
+    valign = bottom
+}
+
+# Power off
+label {
+    monitor =
+    text = 󰐥
+    color = rgba(255, 255, 255, 0.6)
+    font_size = 80
+    onclick = shutdown now
+    position = 750, 100
+    halign =left
+    valign = bottom
+}
+
+# Suspend
+label {
+    monitor =
+    text = 󰤄
+    color = rgba8255, 255, 255, 0.6)
+    font_size = 80
+    onclick = systemctl suspend
+    position = -750, 100
+    halign = right
+    valign = bottom
 }
