--- a/victor/.config/hypr/hyprland.conf
+++ b/victor/.config/hypr/hyprland.conf
@@ -176,10 +176,23 @@ animations {
 # uncomment all if you wish to use that.
 # workspace = w[tv1], gapsout:0, gapsin:0
 # workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
+# windowrule {
+#     name = no-gaps-wtv1
+#     match:float = false
+#     match:workspace = w[tv1]
+#
+#     border_size = 0
+#     rounding = 0
+# }
+#
+# windowrule {
+#     name = no-gaps-f1
+#     match:float = false
+#     match:workspace = f[1]
+#
+#     border_size = 0
+#     rounding = 0
+# }
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -209,7 +222,7 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
+    # kb_options =grp:alt_shift_toggle
     kb_rules =
 
     repeat_rate = 50
@@ -217,7 +230,7 @@ input {
 
     follow_mouse = 2
 
-    left_handed = false
+    left_handed = true
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -359,13 +372,41 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
 # Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
+# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+# Example windowrules that are useful
 
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+    # Ignore maximize requests from all apps. You'll probably like this.
+    name = suppress-maximize-events
+    match:class = .*
+
+    suppress_event = maximize
+}
+
+windowrule {
+    # Fix some dragging issues with XWayland
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
+
+# Hyprland-run windowrule
+windowrule {
+    name = move-hyprland-run
+
+    match:class = hyprland-run
+
+    move = 20 monitor_h-120
+    float = yes
+}
 
 # Allow pop-up window floating
 # windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
