--- a/victor/.config/hypr/hyprpaper.conf
+++ b/victor/.config/hypr/hyprpaper.conf
@@ -5,12 +5,14 @@ CURRENT_WALL=$(hyprctl hyprpaper listloaded)
 
 # Get a random wallpaper that is not the current one
 # WALLPAPER=$(find "$WALLPAPER_DIR" -type f ! -name "$(basename "$CURRENT_WALL")" | shuf -n 1)
+WALLPAPER="$HOME/.config/hypr/wallpaper/mashu.jpg"
 
 # Apply the selected wallpaper
 # hyprctl hyprpaper reload ,"$WALLPAPER"
+# hyprctl hyprpaper reload $HOME/.config/hypr/wallpaper/mashu.jpg
 
 wallpaper {
 	monitor =
-    path = ~/.config/hypr/wallpaper/mashu.jpg
-    fit_mode = cover
+    path="$HOME/.config/hypr/wallpaper/mashu.jpg"
+    fit_mode=cover
 }
