--- a/victor/.config/hypr/hyprland.conf
+++ b/victor/.config/hypr/hyprland.conf
@@ -55,9 +55,11 @@ $menu = app2unit -- fuzzel --launch-prefix='app2unit --'
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
+exec-once = app2unit -- udiskie
 exec-once = app2unit -- fuzzel --launch-prefix='app2unit --'
 exec-once = app2unit -- wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = app2unit -- wl-paste --type image --watch cliphist store # Stores only image data
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
