--- a/victor/.config/hypr/hyprland.conf
+++ b/victor/.config/hypr/hyprland.conf
@@ -41,7 +41,7 @@ xwayland {
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = app2unit -- footclient
+$terminal = app2unit -- wezterm-gui
 $fileManager = app2unit -- thunar
 $menu = app2unit -- fuzzel --launch-prefix='app2unit --'
 #################
@@ -56,6 +56,8 @@ $menu = app2unit -- fuzzel --launch-prefix='app2unit --'
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = app2unit -- udiskie
+exec-once = app2unit -- thunar --daemon
+# exec-once = app2unit -- hyprlauncher -d
 exec-once = app2unit -- fuzzel --launch-prefix='app2unit --'
 exec-once = app2unit -- wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = app2unit -- wl-paste --type image --watch cliphist store # Stores only image data
@@ -232,7 +234,7 @@ input {
 
     follow_mouse = 2
 
-    left_handed = true
+    # left_handed = true
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
@@ -276,6 +278,8 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, 1
+bind = $mainMod, W, exec, ~/.config/hypr/scripts/wallpaper-selector.sh
+
 bind = , F11, fullscreen, 0
 
 # Screenshot a window
@@ -325,12 +329,16 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
+# bind = $mainMod, S, exec, ~/.config/hypr/scripts/toggle.sh
+# chmod +x ~/.config/hypr/scripts/toggle.sh
+
+
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod, S, movetoworkspace, +0
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod, S, movetoworkspace, special:magic
 bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod, S, movetoworkspace, +0
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod, S, movetoworkspace, special:magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-bind = $mainMod, S, togglespecialworkspace, magic
+bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -413,7 +421,41 @@ windowrule {
 # Allow pop-up window floating
 # windowrulev2 = float, class:^(xdg-desktop-portal-gtk)$
 # windowrulev2 = size 900 600, class:^(xdg-desktop-portal-gtk)$
+windowrule {
+    name = float-center-xdg
+    match:class = ^(xdg-desktop-portal-gtk)$
+    center = yes
+    float = yes
+    size = 900 600
+}
 
-windowrulev2 = float, center, size 900 600, class:vlc
-windowrulev2 = float, center, size 900 600, class:mpv
-windowrulev2 = float, center, size 900 600, class:imv
+windowrule {
+    name = float-center-vlc
+    match:class = vlc
+    center = yes
+    float = yes
+    size = 900 600
+}
+
+windowrule {
+    name = float-center-mpv
+    match:class = mpv
+    center = yes
+    float = yes
+    size = 900 600
+}
+
+windowrule {
+    name = float-center-imv
+    match:class = imv
+    center = yes
+    float = yes
+    size = 900 600
+}
+
+windowrule {
+    name = kitty
+    match:class = kitty
+    opacity = 0.85
+}
+
