--- a/victor/.config/yazi/yazi.toml
+++ b/victor/.config/yazi/yazi.toml
@@ -23,6 +23,7 @@ tab_size        = 2
 max_width       = 600
 max_height      = 900
 cache_dir       = ""
+image           = "ueberzug"
 image_delay     = 30
 image_filter    = "triangle"
 image_quality   = 75
@@ -225,3 +226,8 @@ sort_by      	 = "none"
 sort_sensitive = false
 sort_reverse 	 = false
 sort_translit  = false
+
+[manager]
+sort_by = "mtime"
+sort_sensitive = false
+sort_reverse = true   # true = newest first
