--- a/root/home/victor/.config/swaync/config.json
+++ b/root/home/victor/.config/swaync/config.json
@@ -1,32 +1,36 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
+
   "positionX": "right",
   "positionY": "top",
-  "cssPriority": "user",
   "layer": "overlay",
   "control-center-layer": "top",
   "layer-shell": true,
-  "control-center-width": 400,
-  "control-center-height": 650,
+  "cssPriority": "application",
   "control-center-margin-top": 10,
   "control-center-margin-bottom": 10,
   "control-center-margin-right": 10,
   "control-center-margin-left": 0,
-  "notification-window-width": 380,
-  "notification-icon-size": 50,
-  "notification-body-image-height": 200,
+  "notification-2fa-action": true,
+  "notification-inline-replies": false,
+  "notification-icon-size": 64,
+  "notification-body-image-height": 100,
   "notification-body-image-width": 200,
-  "timeout": 8,
-  "timeout-low": 6,
-  "timeout-critical": 0,
-  "fit-to-screen": false,
+  "timeout": 5,
+  "timeout-low": 3,
+  "timeout-critical": 10,
+  "fit-to-screen": true,
+  "relative-timestamps": true,
+  "control-center-width": 400,
+  "control-center-height": 500,
+  "notification-window-width": 380,
   "keyboard-shortcuts": true,
   "image-visibility": "when-available",
   "transition-time": 200,
   "hide-on-clear": false,
   "hide-on-action": true,
-  "text-empty": "No Notifications",
   "script-fail-notify": true,
+
   "notification-visibility": {
     "example-name": {
       "state": "muted",
@@ -34,37 +38,65 @@
       "app-name": "Spotify"
     }
   },
+
   "widgets": [
-    "mpris",
-    "volume",
-    "backlight",
-    "dnd",
     "title",
+    "dnd",
+    "mpris",
     "notifications"
   ],
+
   "widget-config": {
-    "mpris": {
-      "image-size": 50,
-      "image-radius": 0
-    },
-    "volume": {
-      "label": " 󰕾 ",
-      "expand-button-label": " ",
-      "collapse-button-label": " ",
-      "show-per-app": true,
-      "show-per-app-icon": true,
-      "show-per-app-label": false
-    },
-    "backlight": {
-      "label": "󰃟 "
+    "title": {
+      "text": "Notifications",
+      "clear-all-button": true,
+      "button-text": "Clear All"
     },
     "dnd": {
       "text": "Do Not Disturb"
     },
-    "title": {
-      "text": "",
-      "clear-all-button": true,
-      "button-text": " 󰆴 "
+    "label": {
+      "max-lines": 5,
+      "text": "Notification Center"
+    },
+    "mpris": {
+      "image-size": 96,
+      "image-radius": 8,
+      "blur": false
+    },
+    "volume": {
+      "label": "󰕾",
+      "show-per-app": false
+    },
+    "backlight": {
+      "label": "󰃟"
+    },
+    "menubar": {
+      "menu#power-buttons": {
+        "label": "⏻",
+        "position": "right",
+        "actions": [
+          {
+            "label": " Suspend",
+            "command": "systemctl suspend"
+          },
+          {
+            "label": " Reboot",
+            "command": "systemctl reboot"
+          },
+          {
+            "label": " Shutdown",
+            "command": "systemctl poweroff"
+          }
+        ]
+      }
+    }
+  },
+
+  "scripts": {
+    "example-script": {
+      "exec": "echo 'Example script executed'",
+      "urgency": "Normal"
     }
   }
 }
