--- a/root/home/victor/.config/fuzzel/fuzzel.ini
+++ b/root/home/victor/.config/fuzzel/fuzzel.ini
@@ -1,16 +1,15 @@
 include="~/.config/fuzzel/theme.ini"
-; font=JetBrains Mono NF:size=17
-; terminal=foot -e
-; prompt="> "
-; layer=overlay
-; lines=15
-; width=60
-; dpi-aware=no
-; inner-pad=10
-; horizontal-pad=40
-; vertical-pad=15
-; match-counter=yes
-;
+
+font=JetBrains Mono NF:size=15
+terminal=foot -e
+prompt="> "
+layer=overlay
+dpi-aware=no
+inner-pad=10
+horizontal-pad=40
+vertical-pad=15
+match-counter=yes
+
 ; [colors]
 ; background=282c34dd
 ; text=abb2bfdd
@@ -23,11 +22,7 @@ include="~/.config/fuzzel/theme.ini"
 ; selection-match=be5046ff
 ; counter=666e7cff
 ; border=d19a6677
-;
-; [border]
-; radius=10
-; width=2
-;
+
 ; [colors]
 ; background=f7f9ffdd
 ; text=151c23dd
@@ -40,3 +35,4 @@ include="~/.config/fuzzel/theme.ini"
 ; selection-match=4479a2ff
 ; counter=667686ff
 ; border=006a6877
+
