--- a/root/home/victor/.config/hypr/hyprlock.conf
+++ b/root/home/victor/.config/hypr/hyprlock.conf
@@ -1,4 +1,5 @@
-source = $HOME/.config/hypr/scheme/mocha.conf
+# source = $HOME/.config/hypr/scheme/mocha.conf
+source = ~/.config/hypr/hyprlock/color.conf
 
 # BACKGROUND
 background {
@@ -43,7 +44,7 @@ label {
 # Profie-Photo
 image {
     monitor =
-    path = $HOME/.config/hypr/hyprlock/gil.jpg
+    path = $HOME/.config/hypr/hyprlock/avatar.jpg
     border_size = 2
     border_color = rgba(255, 255, 255, .65)
     size = 150
